src/docs/components/docs-topbar/docs-topbar.css
.docs-topbar {
  position: fixed;
  z-index: 2;
  top: 0;
  left: 0;
  right: 0;
  height: var(--docs-topbar-height);
  background-color: var(--ld-col-rp-default);
  box-shadow: var(--ld-shadow-hover);
}

.docs-topbar__content {
  display: flex;
  padding: 0 var(--ld-sp-32);
  align-items: center;
  max-width: var(--docs-max-width);
  height: 100%;
  margin: 0 auto;
  color: var(--ld-col-wht);

  .docs-btn-dots-grid__btn {
    margin-right: var(--ld-sp-24);
  }

  @media (max-width: 48rem) {
    padding: 0 var(--ld-sp-24);
  }
}

.docs-topbar__link-home {
  display: flex;
  align-items: center;
  text-decoration: none;
  margin-right: auto;

  img {
    margin-right: var(--ld-sp-12);
  }
}

.docs-topbar__headline {
  color: var(--ld-col-wht);

  b {
    font-weight: 900;
    margin-right: var(--ld-sp-8);
  }
}

